--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polyglobe",
+  "name": "singlot",
   "version": "0.1",
   "authors": [
     "Joan Perals Tresserra <j.pertres@gmail.com>"
@@ -15,7 +15,10 @@
   "private": true,
   "dependencies": {
     "angular-leaflet": "~0.7.10",
-    "bootstrap-ui": "~0.12.0",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "angular-bootstrap": "~0.12.0"
+  },
+  "resolutions": {
+    "angular": "1.3.x"
   }
 }
